--- a/aluraplay/composer.json
+++ b/aluraplay/composer.json
@@ -13,5 +13,8 @@
     "doctrine/orm": "^2.14",
     "php-di/php-di": "^6.0",
     "symfony/cache": "^6.2"
+  },
+  "require-dev": {
+    "behat/behat": "^3.14"
   }
 }
