--- a/curso-mvc/composer.json
+++ b/curso-mvc/composer.json
@@ -1,20 +1,48 @@
 {
   "autoload": {
     "psr-4": {
-        "Alura\\Armazenamento\\": "src/"
+      "Alura\\Armazenamento\\": "src/"
     }
   },
   "require": {
-    "php": "^8.1",
     "psr/http-message": "^1.0",
     "psr/http-server-handler": "^1.0",
-    "nyholm/psr7": "^1.5",
-    "nyholm/psr7-server": "^1.0",
-    "doctrine/orm": "^2.14",
-    "php-di/php-di": "^6.0",
-    "symfony/cache": "^6.2"
+    "nyholm/psr7": "^1.1",
+    "nyholm/psr7-server": "^0.3.0",
+    "doctrine/orm": "^2.6",
+    "php-di/php-di": "^6.0"
   },
   "require-dev": {
-    "behat/behat": "^3.14"
-  }
+    "behat/behat": "dev-master as 3.6",
+    "behat/mink": "dev-symfony5 as 1.7.999",
+    "behat/mink-extension": "dev-patch-4",
+    "behat/mink-goutte-driver": "^1.2"
+  },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/japicoder/Behat"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/larzuk91/Symfony2Extension"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/ruudk/DoctrineDataFixturesExtension"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/DonCallisto/MinkExtension",
+      "comment": "Waiting for https://github.com/Behat/MinkExtension/pull/355"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/ruudk/MinkBrowserKitDriver"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/breizh81/Mink"
+    }
+  ]
 }
